@@ -1,6 +1,8 @@
 mountall (1.2) UNRELEASED; urgency=low
 
-  * 
+  * "mount" event changed to "mounting", to make it clear it happens
+    before the filesystem is mounted.  Added "mounted" event which
+    happens afterwards.
 
  -- Scott James Remnant <scott@ubuntu.com>  Fri, 11 Dec 2009 13:37:17 +0000
 
